Implement pagination, refactor criteria query class
